--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "aws-cognito-redux-saga": "^1.5.7",
     "axios": "^0.19.0",
+    "eventemitter3": "^4.0.0",
     "material-ui": "^0.20.0",
     "namor": "^2.0.2",
     "react": "^16.8.6",
